# nRF54L15_v3.2.1_LL320D_EM01

nrf/applications/LL311_BLE/: CMakeLists.txt  README.rst  prj.conf  (+2 more)
nrf/applications/LL320D_EM01_BLE/: CMakeLists.txt  Kconfig  README.rst  prj.conf
nrf/applications/LL320D_EM01_BLE/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
nrf/applications/LL320D_EM01_BLE/doc/: 低功耗实施方案.md
nrf/applications/LL320D_EM01_BLE/ext_module/barometer/: barometer_usage_demo.md
nrf/applications/LL320D_EM01_BLE/ext_module/barometer/api/: barometer_api.c  barometer_api.h
nrf/applications/LL320D_EM01_BLE/ext_module/barometer/drivers/SPA06/inc/: spa06_driver.h
nrf/applications/LL320D_EM01_BLE/ext_module/barometer/drivers/SPA06/src/: spa06_driver.c
nrf/applications/LL320D_EM01_BLE/ext_module/nfc/api/: nfc_api.c  nfc_api.h
nrf/applications/LL320D_EM01_BLE/ext_module/temp_humi/api/: temp_humi_api.c  temp_humi_api.h
nrf/applications/LL320D_EM01_BLE/inc/: my_ble_app.h  my_ble_core.h  my_ble_scan.h  my_cmd_setting.h  my_comm.h  my_ctrl.h  my_flash_store.h  my_gsensor.h  my_gsensor_algorithm.h  my_lte.h  my_main.h  my_motor.h  my_nfc.h  my_pm.h  my_ring_buf.h  my_shell.h  my_tool.h  my_version.h  my_wdt.h  my_zms_param.h
nrf/applications/LL320D_EM01_BLE/src/: main.c  my_battery.c  my_ble_app.c  my_ble_core.c  my_ble_scan.c  my_cmd_setting.c  my_ctrl.c  my_dfu_jimi.c  my_flash_store.c  my_gsensor.c  my_lte.c  my_nfc.c  my_pm.c  my_ring_buf.c  my_shell.c  my_wdt.c  my_zms_param.c
nrf/applications/LL320D_EM01_BLE/tool/: train_bayes.py
nrf/applications/LL320D_EM01_BLE/tool/data/: sea.csv
(+64 files in other folders)
